# cicd_pipeline

./: .dockerignore  .flake8  README.md  config  index  main.py  requirements.txt
.github/workflows/: ci-cd.yml  superlinter.yml
cicd_project/: app.py  requirements.txt
cicd_project/.github/workflows/: ci.yml
cicd_project/tests/: test_crud.py
my-python-app/: Dockerfile  ENHANCEMENT_SUMMARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
my-python-app/.github/workflows/: ci-cd.yml  ci.yml
my-python-app/app/: main.py
my-python-app/tests/: test_main.py
